--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install mkdocs>=1.6.0 mkdocs-material>=9.5.0
+          pip install mkdocs>=1.6.0 mkdocs-material>=9.5.0 pillow cairosvg
 
       - name: Build documentation
         run: mkdocs build
